twitter not fix yet

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
           <% if current_user.customers.nil? %>
           <p><strong>Notification : </strong> you don't have any customer.</p>
           <% end %>
-          <% if current_user.password == current_user.email %>
+          <% if current_user.valid_password?(current_user.email) %>
           <p><strong>Notification : </strong> Password same as email, please change</p>
           <% end %>
         </span>
