--- a/app/views/shared/_navbar_main.html.erb
+++ b/app/views/shared/_navbar_main.html.erb
@@ -3,9 +3,9 @@
   </a>
 
   <button type="button" class="btn btn-navbar">
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
+    <div class="icon-bar"></div>
+    <div class="icon-bar"></div>
+    <div class="icon-bar"></span>
   </button>
 
   <%= render 'shared/pull_right' %>
