--- a/app/views/shared/_sidebar_menu.html.erb
+++ b/app/views/shared/_sidebar_menu.html.erb
@@ -15,6 +15,7 @@
           </ul>
           <div class="count"><%= Product.count %></div>
         </li>
+        <li class='large'><%= link_to 'Invoice', billings_path %></li>
       </ul>
       <div class="clearfix"></div>
       <div class="separator bottom"></div>
