using style light

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@
  *= require jquery-ui-1.9.2.custom.min
 
  *= require prettify
- *= require style-dark
+ *= require style-light
  *= require jquery.fullPage
 
  *= require_tree .
